# wgpu-testbed

./: .editorconfig  .gitignore  Cargo.toml  LICENCE  README.md  build.ps1
.cargo/: config.toml
.github/: dependabot.yml
.github/workflows/: azure-static-web-apps-agreeable-dune-08facd403.yml  azure-static-web-apps-latest.yml  azure-static-web-apps-stable.yml  build-deploy-latest.yml  build-deploy-stable.yml  build.yml  dependabot-approve.yml  deploy.yml
resources/: BathyData.csv
shaders/: compute.wgsl  compute_bitangents.wgsl  draw_deferred.wgsl  invert_stenciled.wgsl  light.wgsl  shader.wgsl
wgpu-testbed-app/: Cargo.toml
wgpu-testbed-app/src/: main.rs
wgpu-testbed-lib/: Cargo.toml
wgpu-testbed-lib/src/: bathymetry_loader.rs  camera.rs  file_reader.rs  instance.rs  lib.rs  light.rs  model.rs  pipeline.rs  render_pass.rs  state.rs  texture.rs  uniform.rs  vertex.rs
wgpu-testbed-webapp/: index.html  index.js  package-lock.json  package.json  webpack.config.js
