[package]
name = "wgpu-testbed-app"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
futures = "0.3"

[dependencies.wgpu-testbed-lib]
package = "wgpu-testbed-lib"
path = "../wgpu-testbed-lib"
version = "0.1.0"
