[package]
name = "wgpu-testbed-lib"
version = "0.1.0"
authors = ["Hugo Woodiwiss <hj.woodiwiss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.6", default-features = false, features = [
	"jpeg",
	"png",
	"tga",
] }
winit = { version = "0.29.15" }
cgmath = "0.18"
env_logger = "0.11.6"
log = "0.4"
futures = "0.3"
wgpu = "22.1.0"
bytemuck = { version = "1.23.1", features = ["derive"] }
anyhow = "1.0"
tobj = { version = "4.0.3", features = ["async"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.74"
web-sys = { version = "0.3.72", features = ["Response"] }
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.47"
# Fixes getrandom, used by tobj, requiring the js feature for wasm32-unkown-unknown targets
getrandom = { version = "0.2.16", features = ["js"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[lib]
crate-type = ["cdylib", "rlib"]
