[package]
name = "wgpu-testbed-lib"
version = "0.1.0"
authors = ["Hugo Woodiwiss <hj.woodiwiss@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.25.9", default-features = false, features = [
	"jpeg",
	"png",
	"tga",
] }
winit = { version = "0.30.12" }
cgmath = "0.18"
env_logger = "0.11.6"
log = "0.4"
futures = "0.3"
wgpu = { version = "27.0.1", features = ["std"] }
bytemuck = { version = "1.25.0", features = ["derive"] }
anyhow = "1.0"
tobj = { version = "4.0.3", features = ["futures"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3.74"
web-sys = { version = "0.3.72", features = ["Response"] }
console_error_panic_hook = "0.1.6"
wasm-bindgen-futures = "0.4.64"
# Fixes getrandom, used by tobj, requiring the js feature for wasm32-unkown-unknown targets
getrandom = { version = "0.2.17", features = ["js"] }

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.2"
glob = "0.3"


[lib]
crate-type = ["cdylib", "rlib"]
